# internal/api/oas_response_decoders_gen.go
@@ -334,7 +334,7 @@ func decodeAdminCreateCourseCategoryResponse(resp *http.Response) (res *CourseCa
 	return res, validate.UnexpectedStatusCodeWithResponse(resp)
 }
 
-func decodeAdminCreateCourseLandingPageResponse(resp *http.Response) (res AdminCreateCourseLandingPageRes, _ error) {
+func decodeAdminCreateCourseLandingPageResponse(resp *http.Response) (res *CourseLandingPage, _ error) {
 	switch resp.StatusCode {
 	case 201:
 		// Code 201.
@@ -351,50 +351,6 @@ func decodeAdminCreateCourseLandingPageResponse(resp *http.Response) (res AdminC
 			d := jx.DecodeBytes(buf)
 
 			var response CourseLandingPage
-			if err := func() error {
-				if err := response.Decode(d); err != nil {
-					return err
-				}
-				if err := d.Skip(); err != io.EOF {
-					return errors.New("unexpected trailing data")
-				}
-				return nil
-			}(); err != nil {
-				err = &ogenerrors.DecodeBodyError{
-					ContentType: ct,
-					Body:        buf,
-					Err:         err,
-				}
-				return res, err
-			}
-			// Validate response.
-			if err := func() error {
-				if err := response.Validate(); err != nil {
-					return err
-				}
-				return nil
-			}(); err != nil {
-				return res, errors.Wrap(err, "validate")
-			}
-			return &response, nil
-		default:
-			return res, validate.InvalidContentType(ct)
-		}
-	case 422:
-		// Code 422.
-		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
-		if err != nil {
-			return res, errors.Wrap(err, "parse media type")
-		}
-		switch {
-		case ct == "application/json":
-			buf, err := io.ReadAll(resp.Body)
-			if err != nil {
-				return res, err
-			}
-			d := jx.DecodeBytes(buf)
-
-			var response ValidationError
 			if err := func() error {
 				if err := response.Decode(d); err != nil {
 					return err
@@ -1175,7 +1131,7 @@ func decodeAdminGetCourseCategoryResponse(resp *http.Response) (res *CourseCateg
 	return res, validate.UnexpectedStatusCodeWithResponse(resp)
 }
 
-func decodeAdminGetCourseLandingPageResponse(resp *http.Response) (res AdminGetCourseLandingPageRes, _ error) {
+func decodeAdminGetCourseLandingPageResponse(resp *http.Response) (res *CourseLandingPage, _ error) {
 	switch resp.StatusCode {
 	case 200:
 		// Code 200.
@@ -1216,41 +1172,6 @@ func decodeAdminGetCourseLandingPageResponse(resp *http.Response) (res AdminGetC
 				return nil
 			}(); err != nil {
 				return res, errors.Wrap(err, "validate")
-			}
-			return &response, nil
-		default:
-			return res, validate.InvalidContentType(ct)
-		}
-	case 404:
-		// Code 404.
-		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
-		if err != nil {
-			return res, errors.Wrap(err, "parse media type")
-		}
-		switch {
-		case ct == "application/json":
-			buf, err := io.ReadAll(resp.Body)
-			if err != nil {
-				return res, err
-			}
-			d := jx.DecodeBytes(buf)
-
-			var response NotFoundError
-			if err := func() error {
-				if err := response.Decode(d); err != nil {
-					return err
-				}
-				if err := d.Skip(); err != io.EOF {
-					return errors.New("unexpected trailing data")
-				}
-				return nil
-			}(); err != nil {
-				err = &ogenerrors.DecodeBodyError{
-					ContentType: ct,
-					Body:        buf,
-					Err:         err,
-				}
-				return res, err
 			}
 			return &response, nil
 		default:
@@ -3108,7 +3029,7 @@ func decodeAdminUpdateCourseCategoryResponse(resp *http.Response) (res *CourseCa
 	return res, validate.UnexpectedStatusCodeWithResponse(resp)
 }
 
-func decodeAdminUpdateCourseLandingPageResponse(resp *http.Response) (res AdminUpdateCourseLandingPageRes, _ error) {
+func decodeAdminUpdateCourseLandingPageResponse(resp *http.Response) (res *CourseLandingPage, _ error) {
 	switch resp.StatusCode {
 	case 200:
 		// Code 200.
@@ -3125,50 +3046,6 @@ func decodeAdminUpdateCourseLandingPageResponse(resp *http.Response) (res AdminU
 			d := jx.DecodeBytes(buf)
 
 			var response CourseLandingPage
-			if err := func() error {
-				if err := response.Decode(d); err != nil {
-					return err
-				}
-				if err := d.Skip(); err != io.EOF {
-					return errors.New("unexpected trailing data")
-				}
-				return nil
-			}(); err != nil {
-				err = &ogenerrors.DecodeBodyError{
-					ContentType: ct,
-					Body:        buf,
-					Err:         err,
-				}
-				return res, err
-			}
-			// Validate response.
-			if err := func() error {
-				if err := response.Validate(); err != nil {
-					return err
-				}
-				return nil
-			}(); err != nil {
-				return res, errors.Wrap(err, "validate")
-			}
-			return &response, nil
-		default:
-			return res, validate.InvalidContentType(ct)
-		}
-	case 422:
-		// Code 422.
-		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
-		if err != nil {
-			return res, errors.Wrap(err, "parse media type")
-		}
-		switch {
-		case ct == "application/json":
-			buf, err := io.ReadAll(resp.Body)
-			if err != nil {
-				return res, err
-			}
-			d := jx.DecodeBytes(buf)
-
-			var response ValidationError
 			if err := func() error {
 				if err := response.Decode(d); err != nil {
 					return err
